--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -1,6 +1,11 @@
-name: Site
+name: Generate README and scaladoc
 on:
   workflow_dispatch:
+  push:
+    paths:
+      - 'src/docs/**'
+      - '*.scala'
+  release:  
 
 jobs:
   site:
