--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -30,5 +30,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "> Publish GitHub Pages"
-          sbt makeSite ghpagesPushSite   
+          sbt makeSite publishToGitHubPages   
     
