--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,15 +12,9 @@ on:
   pull_request:
     branches: [ master, main ]
 
+  workflow_dispatch:  
+
 jobs:
   build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Run tests for supported Scala versions
-      run: sbt -J-Xmx2G +test
+    uses: arturopala/workflows/.github/workflows/build.yml@main
       
