--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,4 +10,5 @@ jobs:
       PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
       PGP_SECRET: ${{ secrets.PGP_SECRET }}
       SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-      SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }} 
+      SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}  
+      PAT: ${{ secrets.PAT }}  
